[project]
name = "arsenal"
version = "0.1.0"
description = "Python implementations of STL-style containers, classic data structures, graphs, and algorithms — built from scratch for understanding"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "류현승" },
]
keywords = ["algorithms", "data-structures", "graph", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "graphviz>=0.20",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search_path = ["src"]
python_interpreter = ".venv/bin/python"

[dependency-groups]
dev = [
    "pyrefly>=0.20",
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
notebook = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arsenal"]

# ─────────────────────────────────────────────
# ruff: 린터 + 포매터
# ─────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "examples"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear (실수 방지)
    "C4",     # flake8-comprehensions (컴프리헨션 최적화)
    "SIM",    # flake8-simplify (코드 단순화)
    "RUF",    # ruff 자체 룰
    "PL",     # pylint
    "PERF",   # perflint (성능 관련)
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",    # line too long (formatter가 처리)
    "PLR0913", # too many arguments (알고리즘 함수 인자 많을 수 있음)
    "PLR2004", # magic value comparison (알고리즘 상수 흔함)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "N802",    # function name should be lowercase (수학 표기 허용: .A, .D, .L)
    "N803",    # argument name should be lowercase (수학 변수명 허용: N, M, K)
    "N806",    # variable should be lowercase (같은 이유)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # magic values in tests OK
    "S101",     # assert in tests OK
]
"src/core/graph/*.py" = [
    "PLC0415",  # 상호 의존 클래스(Vertex↔Edge↔Walk)의 순환 import 회피용 local import
]
"benchmarks/**/*.py" = [
    "T201",     # print in benchmarks OK
]
"examples/**/*.py" = [
    "T201",
]

[tool.ruff.lint.isort]
known-first-party = ["arsenal"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ─────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                          # 스킵·실패 요약 표시
    "--strict-markers",             # 미등록 마커 에러
    "--strict-config",
]
markers = [
    "slow: 느린 테스트 (기본에서 제외: pytest -m 'not slow')",
    "benchmark: 성능 측정 테스트",
]

[tool.coverage.run]
source = ["arsenal"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
